Python machine learning development for streamlit

--- a/heart_disease_analysis.ipynb
+++ b/heart_disease_analysis.ipynb
@@ -2817,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -2976,6 +2976,16 @@
     "\n",
     "# Display the top 10 results\n",
     "print(df_scores.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exporting the model for streamlit\n",
+    "pickle.dump(rf, open(\"heart_rf.pkl\", \"wb\"))"
    ]
   }
  ],
