Python machine learning development for streamlit

--- a/heart_disease_analysis.ipynb
+++ b/heart_disease_analysis.ipynb
@@ -2984,7 +2984,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exporting the model for streamlit\n",
+    "# Exporting the model for streamlit app\n",
     "pickle.dump(rf, open(\"heart_rf.pkl\", \"wb\"))"
    ]
   }
